# pybase

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
pybase/: factorial.py
test/: factorial_test.py
